--- a/doc/papers/3rd paper/3rd paper.tex
+++ b/doc/papers/3rd paper/3rd paper.tex
@@ -313,7 +313,7 @@ einen WSDL-Generator für die Erstellung von Web Services entwickeln. Die Web
 Service Description Language (WSDL), welche in \cite{WebServicePart1} näher
 erläutert wird, verwendet man um die Schnittstellen der Dienste zu beschreiben.
 Anbieter von Web Services können ihren Nutzern WSDL-Dokumente zur Verfügung
-stellen, aus denen sie erfahren welche Operationen angeboten werden und welche
+stellen, aus denen sie erfahren, welche Operationen angeboten werden und welche
 Elemente in den SOAP-Nachrichten enthalten sein müssen um sie zu nutzen. Die
 WSDL-Beschreibung ist dann eine Art Vertrag zwischen den Kommunikationspartnern,
 an den sich beide halten müssen um erfolgreich Nachrichten auszutauschen. Der
@@ -337,9 +337,9 @@ Objekten wahr. Die Komplexität wird also durch den SOAP RPC Stack verborgen.
 Bei der DOC-Variante hingegen wird der Methodenaufruf direkt auf ein XML
 Dokument abgebildet, das dann über SOAP versendet wird. Der gesamte
 Nachrichtenaustausch zwischen Client und Web Service ist hier durch die zugrunde
-liegende XML Schema Beschreibung bereits vorgegeben. Demzufolge muss nur die
-Nachricht benannt werden um die Parameterliste direkt übergeben zu können, da
-die Nachricht deren Art und Reihenfolge bereits vorgibt. Dadurch entsteht bei
+liegende XML Schema Beschreibung bereits vorgegeben. Da die Nachricht die Art und 
+Reihenfolge der Kommunikation bereits vorgibt, muss diese demzufolge nur benannt 
+werden um die Parameterliste direkt übergeben zu können. Dadurch entsteht bei
 der Kommunikation viel weniger Traffic, als es bei RPC der Fall ist. Während
 nämlich die Methodenaufrufe durch den Aufbau des Stacks erheblich mehr Overhead
 erzeugen, muss man bei DOC nur die Nachricht aus dem Schema identifizieren und
@@ -349,10 +349,10 @@ Auswirkungen der verschiedenen SOAP Varianten auf die Performance ist unter
 
 Des Weiteren gibt es noch zwei verschiedene Kodierungsmöglichkeiten, um die
 Übergabewerte beim Sender zu serialisieren und beim Empfänger wieder zu
-rekonstruieren. Die erste Variante ist es eine spezielle Kodierung zu verwenden.
+rekonstruieren. Bei der ersten Variante wird eine spezielle Kodierung verwendet.
 Die einzige gebräuchliche Kodierung ist das im SOAP-Standard \cite{SOAP}
 spezifizierte SOAP-Encoding. Diese schreibt vor, wie man alle Typen der
-jeweiligen Programmiersprache, auf vom Standard definierte Typen von
+jeweiligen Programmiersprache, auf die vom Standard definierten Typen von
 XML-Elementen abbildet. Wenn die Nachricht dann also versendet werden soll,
 müssen Client und Web Service dafür sorgen, diese Abbildungen zu nutzen. Die
 zweite Kodierungsart ist die "`Literal"'-Variante.
@@ -412,7 +412,7 @@ Rückgabewerten fragen können. Dies ist einer der Hauptvorteile des
 \texttt{WSDLGenerators}, da er nicht selbst die Klassen parsen muss, um die 
 benötigten Informationen zu erhalten.
 
-Jede so gefundenen Methoden bzw. jede hinzugefügte Funktion muss in
+Alle so gefundenen Methoden bzw. jede hinzugefügte Funktion muss in
 die WSDL-Datei abgebildet werden. Sollten bestimmte Methoden nicht
 veröffentlicht werden, so kann das Policy-PlugIn, das im Abschnitt
 \ref{Policy-PlugIn} vorgestellt wird, genutzt werden. Es erhält als Eingabe die
@@ -447,8 +447,8 @@ Antwortnachrichten definiert. Eine Liste der Methoden ist indirekt durch den
 Message-Teil gegeben, bei dem für jede Methode ein Element für die Anfrage und
 ein Element für die entsprechende Antwort vorhanden ist. Darauf folgt die
 PortType-Abteilung, in der die Methoden auf Operationen abgebildet werden.
-Anschließend wird die Kombination aus Aufruf und Kodierung explizit angegeben in
-der Binding-Sektion und abschließend kommt noch das Service-Element, bei dem
+Anschließend wird die Kombination aus Aufruf und Kodierung explizit in
+der Binding-Sektion angegeben und abschließend folgt das Service-Element, bei dem
 der Service an einen Port gebunden wird.
 
 Auf die erzeugte Struktur kann der Anwender dann mit den Methoden 
